--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,10 +4,13 @@
 }
 
 .maxWidthWrapper {
+  width: 1024px;
+  isolation: isolate;
 }
 
 .header {
   padding-bottom: 64px;
+  width: 65%;
 }
 
 .title {
@@ -24,7 +27,47 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  top: 128px;
+  right: -70px;
+  /* z-index: 1; */
+  min-height: 500px;
+  width: 500px;
+}
+
+.perspective {
+  position: fixed;
+  background-color: hsl(195deg, 20%, 86%);
+  width: 100vw;
+  height: 40%;
+  bottom: 0;
+  /* z-index: -1; */
 }
 
 .controlColumn {
+  width: 50%;
+}
+
+@media (max-width: 425px) {
+  .maxWidthWrapper {
+    width: 100vw;
+    margin-top: -250px;
+    margin-bottom: 250px;
+    padding: 0;
+    overflow: scroll;
+  }
+  .controlColumn {
+    display: flex;
+  }
+  .characterWrapper {
+    position: static;
+    height: 100vh;
+    width: 100vw;
+  }
+  .header {
+    display: none;
+  }
+  .perspective {
+    display: none;
+  }
 }
